packages/build/tests/error/fixtures/function/plugin.js
'use strict'

module.exports = function testPlugin() {
  throw new Error('test')
}
